[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01"
path = "src/bin/day01/main.rs"

[[bin]]
name = "day02"
path = "src/bin/day02/main.rs"

[[bin]]
name = "day03"
path = "src/bin/day03/main.rs"

[[bin]]
name = "day04"
path = "src/bin/day04/main.rs"

[[bin]]
name = "day05"
path = "src/bin/day05/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
